--- a/src/apps/resume/index.html
+++ b/src/apps/resume/index.html
@@ -17,12 +17,10 @@
 
       <div class="container">
 
-        <h1>Tom Yeh</h1>
+        <h1>Kaiyue An</h1>
 
         <h2>Favorite Programming Languages</h2>
-        <ul class="collection">
-          <li class="collection-item">Javascript</li>
-          <li class="collection-item">Haskell</li>
+        <ul class="collection" id="languages">
         </ul>
 
         <h2>Favorite Food</h2>
@@ -34,13 +32,20 @@
       <script>
 
         // create a firebase reference to the root
-        var ref = new Firebase('https://hello-ucdd2.firebaseio.com/')
+        var ref = new Firebase('https://ucddaky.firebaseio.com/')
 
         // read data from the location bio/favorite_foods, only once
         ref.child('bio/favorite_foods').once('value', function(snapshot){
           var foods = snapshot.val()
           foods.forEach(function(food){
             $('#foods').append('<li class="collection-item">' + food + '</li>')
+          })
+        })
+
+        ref.child('bio/favorite_programming_language').once('value', function(snapshot){
+          var languages = snapshot.val()
+          languages.forEach(function(language){
+            $('#languages').append('<li class="collection-item">' + language + '</li>')
           })
         })
       </script>
